objects/Goal_Type__c.object
<CustomObject>
    <description>This object holds lookup values for defining goals. There are two types of values being identified:
1.	Users would create records differentiated (via the Description field) to identify the different types of goals. 
2.	Each record would indicate the type of data or process interaction with the transactions that would meet that goal; effectively, this answers the question, “Where do we tell the automation to find the transactions?</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Process__c</fullName>
        <label>Base Process</label>
        <picklist>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualitative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>GT{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multipliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explicit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Goal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Goal Template</label>
        <type>Checkbox</type>
    </fields>
    <label>Goal Type</label>
    <listViews>
        <fullName>Active_Goal_Template</fullName>
        <columns>NAME</columns>
        <columns>Base_Process__c</columns>
        <columns>Standard_Goal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Standard_Goal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Goal Template</label>
    </listViews>
    <listViews>
        <fullName>Active_Goal_Types</fullName>
        <columns>NAME</columns>
        <columns>Base_Process__c</columns>
        <columns>Standard_Goal__c</columns>
        <columns>Description__c</columns>
        <columns>Discount__c</columns>
        <columns>Discount_Type__c</columns>
        <columns>Minimum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Goal Types</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Goal Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Types</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VR_Base_Process</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(
	TEXT(Base_Process__c)
)</errorConditionFormula>
        <errorDisplayField>Base_Process__c</errorDisplayField>
        <errorMessage>You must supply a Base Process</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_No_Discount_Allowed</fullName>
        <active>true</active>
        <description>Discount Type is not “Explicit”</description>
        <errorConditionFormula>AND(
	NOT(ISPICKVAL(
			Discount_Type__c,
			&apos;Explicit&apos;)
	),
	Discount__c &gt; 0
)</errorConditionFormula>
        <errorDisplayField>Discount__c</errorDisplayField>
        <errorMessage>The Discount % must be blank or zero if the Discount Type is not explicit.</errorMessage>
    </validationRules>
</CustomObject>